--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
   "description": "",
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^8.1.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "openai": "^6.9.1",
